--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -8,5 +8,6 @@
     <h1>University Registrar</h1>
     <a href="/students">View All Students</a>
     <a href="/courses">View All Courses</a>
+    <a href="/departments">View All Departments</a>
   </body>
 </html>
