add major stuff

--- a/Views/student.cshtml
+++ b/Views/student.cshtml
@@ -49,6 +49,86 @@
     </select>
     <button type="submit">Add Course</button>
   </form>
+  <form class="form-group" action="/students/@Model.GetId()/updatemajors" method="post">
+  <h4>Majors:</h4>
+  @if(Model.GetMajors().Count == 0)
+  {
+    <p>
+      Student has not declared a major
+    </p>
+    <label for="new-major">New Major:</label>
+    <select name="new-major">
+      <option value="0">Undeclared</option>
+      @foreach(var department in Model.GetAllDepartments())
+      {
+        <option value="@department.GetId()">@department.GetName()</option>
+      }
+    </select>
+  }
+  else if(Model.GetMajors().Count == 1)
+  {
+    <label for="current-major">Current Major:</label>
+    <select name="current-major">
+      <option value="0">Undeclared</option>
+      @foreach(var department in Model.GetAllDepartments())
+      {
+        if(department.GetName() == Model.GetMajors()[0].GetName())
+        {
+          <option selected="selected" value="@department.GetId()">@department.GetName()</option>
+        }
+        else
+        {
+          <option value="@department.GetId()">@department.GetName()</option>
+        }
+      }
+    </select>
+    <label for="additional-major"></label>
+    <select name="additional-major">
+      <option value="0">Undeclared</option>
+      @foreach(var department in Model.GetAllDepartments())
+      {
+        if(department != Model.GetMajors()[0])
+        {
+          <option  value="@department.GetId()">@department.GetName()</option>
+        }
+      }
+    </select>
+  }
+  else
+  {
+    <label for="first-major">First Major:</label>
+    <select name="first-major">
+      <option value="0">Undeclared</option>
+      @foreach(var department in Model.GetAllDepartments())
+      {
+        if(department == Model.GetMajors()[0])
+        {
+          <option selected="selected" value="@department.GetId()">@department.GetName()</option>
+        }
+        else
+        {
+          <option value="@department.GetId()">@department.GetName()</option>
+        }
+      }
+    </select>
+    <label for="second-major">Second Major:</label>
+    <select name="second-major">
+      <option value="0">Undeclared</option>
+      @foreach(var department in Model.GetAllDepartments())
+      {
+        if(department == Model.GetMajors()[1])
+        {
+          <option selected="selected" value="@department.GetId()">@department.GetName()</option>
+        }
+        else
+        {
+          <option value="@department.GetId()">@department.GetName()</option>
+        }
+      }
+    </select>
+  }
+    <button type="submit">Submit</button>
+  </form>
     <a href="/students">View All Students</a>
     <a href="/">Home</a>
   </body>
